--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,7 +4,10 @@ import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import MobileNav from "../components/MobileNav.astro";
 import SearchModal from "../components/SearchModal";
+import { getLangFromUrl } from "../i18n/utils";
 import "../styles/global.css";
+
+const lang = getLangFromUrl(Astro.url);
 
 interface Props {
   title: string;
@@ -46,7 +49,7 @@ const fullTitle =
 ---
 
 <!doctype html>
-<html lang="en-SG" class="dark">
+<html lang={lang} class="dark">
   <head>
     <ClientRouter />
     <meta charset="UTF-8" />
@@ -85,7 +88,7 @@ const fullTitle =
     <meta property="og:description" content={description} />
     <meta property="og:image" content={fullOgImage} />
     <meta property="og:site_name" content="Gin's Blog" />
-    <meta property="og:locale" content="en_SG" />
+    <meta property="og:locale" content={lang.replace("-", "_")} />
     {
       publishedTime && (
         <meta property="article:published_time" content={publishedTime} />
@@ -134,6 +137,6 @@ const fullTitle =
     <MobileNav />
     <Footer />
 
-    <SearchModal client:idle />
+    <SearchModal client:load />
   </body>
 </html>
